Deleted center align and fixed padding

--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ li a {
   display: block;
   color: #2f3e46;
   text-decoration: none;
-  padding: 200px 185px;
+  padding: 25px 185px;
   font-size: 25px;
-  text-align: center;
 }
